[tool.poetry]
name = "churnsage"
version = "0.1.0"
description = "Predicting Customer Churn using Random Forest. The model is deployed alongside an interactive Gradio interface."
authors = ["Yousinator <y.omusabeh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.9.2"
ipykernel = "^6.28.0"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
numpy = "^1.26.3"
rich = "^13.7.0"
seaborn = "^0.13.1"
gradio = "^4.16.0"
prisma-ml = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
